--- a/playbook.yml
+++ b/playbook.yml
@@ -28,4 +28,8 @@
         name: nodejs-jenkins-ansible
         image: "{{ image }}"
         state: started
+        published_ports:
+        - 3000:3000
+        - 9229:9229
+        - 9230:9230
         recreate: yes
